--- a/Compra.html
+++ b/Compra.html
@@ -61,8 +61,8 @@ ddsmoothmenu.init({
           	<div id="top-menu">
             <nav class="mainMenu">
               <ul class="nav">
-                <li><a class="menu" href="Floreria kyos Inicio.html">Inicio</a></li>
-                <li><a class="menu" href="Floreria kyos Inicio.html">Servicios</a></li>
+                <li><a class="menu" href="index.html">Inicio</a></li>
+                <li><a class="menu" href="index.html">Servicios</a></li>
                 <li><a class="menu" href="flores.html">Flores</a></li>
                 <li></li>
                 <li><a class="menu" href="#templatemo_contact">Contacto</a></li>
